--- a/src/localization/fr/messages.json
+++ b/src/localization/fr/messages.json
@@ -6,19 +6,19 @@
   "blood.guide.death-strike.dump-rp": "",
   "blood.guide.death-strike.good-healing": "",
   "blood.guide.death-strike.low-hp": "",
-  "className.druid": "",
-  "className.hunter": "",
-  "className.paladin": "",
-  "className.priest": "",
-  "className.rogue": "",
-  "className.shaman": "",
-  "className.warlock": "",
+  "className.druid": "Druide",
+  "className.hunter": "Chasseur",
+  "className.paladin": "Paladin",
+  "className.priest": "Prêtre",
+  "className.rogue": "Voleur",
+  "className.shaman": "Chaman",
+  "className.warlock": "Démoniste",
   "common.abilities": "",
   "common.ability": "",
   "common.cast": "",
   "common.efficiency": "",
   "common.getFightName.fightname": "",
-  "common.getFightName.kill": "",
+  "common.getFightName.kill": "Mort",
   "common.getFightName.wipe": "Wipe {wipes}",
   "common.groundingtotem.cast": "",
   "common.groundingtotem.spellgrounded": "",
